# population-restorator-api

./: .env.example  .gitignore  Makefile  README.md  population-restorator-api-config.yaml.example  pyproject.toml
api_app/: __init__.py  __main__.py  fastapi_init.py
api_app/handlers/: routers.py
api_app/handlers/system/: __init__.py  check_health.py  redirect_to_swagger.py  routers.py
api_app/handlers/territories/: __init__.py  routers.py  territories.py
api_app/logic/: __init__.py  territories.py
api_app/logic/impl/: __init__.py  territories.py
api_app/logic/impl/helpers/: __init__.py  requests.py  territories.py
api_app/schemas/: __init__.py  buildings.py  ping.py  territories.py
api_app/utils/: __init__.py  config.py  dotenv.py
app/: __init__.py  __main__.py  fastapi_init.py
app/db/: __init__.py  conn_manager.py
app/db/entities/: __init__.py  forecasted.py
app/handlers/: __init__.py  routers.py
app/handlers/system/: __init__.py  check_health.py  redirect_to_swagger.py  routers.py
app/handlers/territories/: __init__.py  routers.py  territories.py
app/helpers/: __init__.py  houses.py  requests.py  territories.py  time.py
app/http_clients/: __init__.py
app/http_clients/common/: __init__.py  exceptions.py  http_client.py  requests.py
app/http_clients/models/: __init__.py
app/http_clients/models/saving_client/: __init__.py  client.py
app/http_clients/models/socdemo_client/: OLDPOP.py  __init__.py  _client.py  client.py
app/http_clients/models/urban_client/: __init__.py  _client.py  client.py
app/logic/: __init__.py  territories.py
app/logic/impl/: territories.py
app/logic/impl/helpers/: requests.py  territories.py  time.py
app/middlewares/: __init__.py  exception_handler.py  logging.py
app/models/: __init__.py  demographics.py  fertility_per_woman.py  urban_social_distribution.py
app/schemas/: __init__.py  ping.py  territories.py
app/utils/: __init__.py  config.py  dotenv.py  logging.py  redis_client.py
tests/: __init__.py
