[tool.poetry]
name = "population-restorator-api"
version = "0.1.0"
description = "todo"
authors = ["Banakh Andrei <uuetsukeu@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.37"
isort = "^5.13.2"
pylint = "^3.3.3"
black = "^24.10.0"
geojson = "^3.2.0"
click = "^8.1.8"
aiohttp = "^3.11.11"
pandas = "^2.2.3"
geopandas = "^1.0.1"

[tool.poetry.scripts]
launch_population-restorator-api = "app.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
