[project]
name = "population-restorator-api"
version = "0.1.0"
description = "todo"
authors = [
    {name = "Banakh Andrei",email = "uuetsukeu@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "geojson (>=3.2.0,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "structlog (>=25.1.0,<26.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "population-restorator @ file:///home/banakh/work/population-restorator-api/population-restorator",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.scripts]
launch_population-restorator-api = "app.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.pylint.format]
max-line-length = 120
disable = ["duplicate-code"]
expected-line-ending-format = "LF"


[tool.isort]
force_grid_wrap = 0
lines_after_imports = 2
multi_line_output = 3
line_length = 120
use_parentheses = true
ensure_newline_before_comments = true
include_trailing_comma = true
split_on_trailing_comma = true
py_version = 39

